Update tests: storage strategies and fixture hashing
Normalize fixture line endings and update expected SHA-256 hashes; add StandardCharsets import and canonicalFixtureBytes() to compute deterministic hashes. Expand allowed storage strategies in HostCapabilityCheckerTest to include BTRFS, OVERLAY and FUSE_OVERLAY. Refactor HostStorageCapabilityCheckerTest selection logic to choose the first available strategy from a prioritized list (reflink, btrfs, overlay, fuse-overlay) and add hasPassingCapability() helper and StrategyCapability record.